prefs-dialog: Clear "custom" dialog automatically when another radio option is selected

Also fixed bug where the "custom" dialog becomes unsensitive if one
highlights it fully and then types on top of it.

https://bugzilla.gnome.org/show_bug.cgi?id=783290